# plugins

./: .gitignore  .protolock  .prototools  Cargo.toml  README.md  depot.json  moon.yml  skills-lock.json
.moon/: toolchain.yml  (+2 more)
backends/asdf/: CHANGELOG.md  Cargo.toml  README.md
backends/asdf/src/: config.rs  proto.rs
backends/asdf/tests/: download_test.rs  metadata_test.rs  shims_test.rs  versions_test.rs
backends/asdf/tests/snapshots/: shims_test__asdf_backend__creates_shims.snap
backends/cargo/: CHANGELOG.md  Cargo.toml  README.md
backends/cargo/src/: config.rs  proto.rs
backends/cargo/tests/: download_test.rs  locate_test.rs  metadata_test.rs  versions_test.rs
backends/npm/: CHANGELOG.md  Cargo.toml  README.md
backends/npm/src/: config.rs  proto.rs
backends/npm/tests/: download_test.rs  locate_test.rs  metadata_test.rs  shims_test.rs  versions_test.rs
crates/lang-javascript-common/: Cargo.toml
crates/lang-javascript-common/src/: node_dist.rs  package_json.rs
extensions/download/: CHANGELOG.md  Cargo.toml
extensions/download/src/: download_ext.rs
extensions/download/tests/: download_test.rs
extensions/migrate-nx/: CHANGELOG.md  Cargo.toml
extensions/migrate-nx/src/: migrate_nx_ext.rs  nx_json.rs  nx_migrator.rs
extensions/migrate-nx/tests/: migrate_nx_test.rs
extensions/migrate-nx/tests/snapshots/: migrate_nx_test__migrate_nx_extension__converts_nx_builtin_executors.snap  migrate_nx_test__migrate_nx_extension__converts_root_files.snap  migrate_nx_test__migrate_nx_extension__nx_json__converts_named_inputs.snap  migrate_nx_test__migrate_nx_extension__projects__converts_name_and_implicit_deps.snap  migrate_nx_test__migrate_nx_extension__projects__converts_named_inputs.snap  (+6 more)
extensions/unpack/: CHANGELOG.md  Cargo.toml
extensions/unpack/src/: unpack_ext.rs
extensions/unpack/tests/: unpack_test.rs
toolchains/go/: CHANGELOG.md  Cargo.toml
toolchains/go/src/: config.rs  go_mod.rs  go_sum.rs  go_work.rs  lib.rs  tier1.rs  tier2.rs  tier3.rs
toolchains/go/tests/: go_mod_test.rs  go_sum_test.rs  go_work_test.rs  tier1_test.rs  tier2_test.rs
toolchains/javascript/: CHANGELOG.md  Cargo.toml
toolchains/javascript/src/: config.rs  infer_tasks.rs  lib.rs  package_json.rs  tier1.rs  tier2.rs
toolchains/javascript/tests/: package_json_test.rs  tier1_sync_test.rs  tier1_test.rs  tier2_env_test.rs  tier2_test.rs
toolchains/node/: CHANGELOG.md  Cargo.toml
toolchains/node-depman/: CHANGELOG.md  Cargo.toml
toolchains/node-depman/src/: config.rs  lib.rs  tier1.rs  tier2.rs  tier3.rs
toolchains/node-depman/tests/: tier1_test.rs  tier2_test.rs
toolchains/node/src/: config.rs  moon.rs  tier1.rs  tier2.rs  tier3.rs
toolchains/node/tests/: moon_test.rs  tier1_test.rs  tier2_test.rs
toolchains/python/: CHANGELOG.md  Cargo.toml
toolchains/python-pip/: CHANGELOG.md  Cargo.toml
toolchains/python-pip/src/: config.rs  lib.rs  tier1.rs
toolchains/python-poetry/: CHANGELOG.md  Cargo.toml
toolchains/python-poetry/src/: config.rs  tier1.rs  tier3.rs
toolchains/python-uv/: CHANGELOG.md  Cargo.toml
toolchains/python-uv/src/: config.rs  lib.rs  tier1.rs  tier2.rs  tier3.rs
toolchains/python/src/: config.rs  lib.rs  pyproject_toml.rs  tier1.rs  tier2.rs  tier3.rs
toolchains/python/tests/: tier1_test.rs  tier2_test  tier2_test.rs
toolchains/ruby/: CHANGELOG.md  Cargo.toml
toolchains/ruby/src/: config.rs  gemfile.rs  gemfile_lock.rs  lib.rs  tier1.rs  tier2.rs  tier3.rs
toolchains/ruby/tests/: tier1_test.rs  tier2_test.rs
toolchains/rust/: CHANGELOG.md  Cargo.toml
toolchains/rust/src/: cargo_metadata.rs  cargo_toml.rs  config.rs  docker.rs  install_deps.rs  lib.rs  moon.rs  run_task.rs  setup_env.rs  tier1.rs  tier2.rs  tier2_env.rs  tier3.rs  toolchain_toml.rs
toolchains/rust/tests/: cargo_toml_test.rs  tier1_test.rs  tier2_env_test.rs  tier2_test.rs  toolchain_toml_test.rs
toolchains/system/: CHANGELOG.md  Cargo.toml
toolchains/system/src/: lib.rs  tier1.rs
toolchains/typescript/: CHANGELOG.md  Cargo.toml  moon.yml
toolchains/typescript/src/: config.rs  context.rs  lib.rs  moon.rs  run_task.rs  sync_project.rs  tier1.rs  tier1_sync.rs  tier2.rs  tsconfig_json.rs
toolchains/typescript/tests/: run_task_test.rs  sync_project_test.rs  tier1_sync_test.rs  tier1_test.rs  tier2_test.rs  tsconfig_json_test.rs  utils.rs
tools/asdf/: Cargo.toml
tools/asdf/src/: config.rs  lib.rs  proto.rs
tools/asdf/tests/: download_test.rs  metadata_test.rs  versions_test.rs
tools/bun/: CHANGELOG.md  Cargo.toml  README.md
tools/bun/src/: config.rs  proto.rs
tools/bun/tests/: download_test.rs  metadata_test.rs  versions_test.rs
tools/example/: CHANGELOG.md  Cargo.toml  README.md
tools/example/src/: proto.rs
tools/go/: CHANGELOG.md  Cargo.toml  README.md
tools/go/src/: config.rs  lib.rs  proto.rs  version.rs
tools/go/tests/: build_test.rs  download_test.rs  metadata_test.rs
tools/internal-schema/: CHANGELOG.md  Cargo.toml  README.md
tools/internal-schema/src/: lib.rs  proto.rs  schema.rs
tools/internal-schema/tests/: download_test.rs  metadata_test.rs
tools/java/: CHANGELOG.md  Cargo.toml  README.md
tools/java/src/: config.rs  foojay.rs  java.rs  lib.rs  proto.rs  version.rs
tools/java/tests/: download_test.rs  metadata_test.rs  shims_test.rs  versions_test.rs
tools/moon/: CHANGELOG.md  Cargo.toml  README.md
tools/moon/src/: proto.rs
tools/moon/tests/: build_test.rs  download_test.rs  metadata_test.rs
tools/node/: CHANGELOG.md  Cargo.toml  README.md
tools/node-depman/: CHANGELOG.md  Cargo.toml  README.md
tools/node-depman/src/: config.rs  lib.rs  npm_registry.rs  package_manager.rs  proto.rs  yarn_compat.rs
tools/node-depman/templates/: bash-shim.sh  cmd-shim.cmd
tools/node-depman/tests/: activate_test.rs  download_test.rs  hooks_test.rs  metadata_test.rs  shims_test.rs  versions_test.rs
tools/node/src/: config.rs  lib.rs  proto.rs
tools/node/tests/: build_test.rs  download_test.rs  metadata_test.rs  versions_test.rs
tools/proto/: CHANGELOG.md  Cargo.toml
tools/proto/src/: proto.rs
(+274 files in other folders)
