[workspace]
resolver = "2"
members = ["backends/*", "crates/*", "extensions/*", "tools/*", "toolchains/*"]

[workspace.dependencies]
# Common
extism-pdk = { version = "1.4.1" }
regex = { version = "1.11.2", default-features = false, features = ["std"] }
rustc-hash = "2.1.1"
schematic = { version = "0.18.12", default-features = false, features = [
    "schema",
] }
semver = "1.0.27"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serial_test = "3.2.0"
shell-words = "1.1.0"
starbase_archive = { version = "0.11.8", default-features = false }
starbase_sandbox = "0.9.9"
starbase_utils = { version = "0.11.19", default-features = false }
tokio = { version = "1.47.1", features = ["full"] }
toml = { version = "0.9.7", default-features = false, features = [
    "parse",
    "serde",
] }

# moon
moon_common = { version = "0.2.0" }
moon_config = { version = "0.2.0" }
moon_pdk = { version = "0.4.0" }
moon_pdk_api = { version = "0.4.1" }
moon_pdk_test_utils = { version = "0.4.1" }
moon_project = { version = "0.2.0" }
moon_target = { version = "0.2.0" }
# moon_common = { path = "../../moon/crates/common" }
# moon_config = { path = "../../moon/crates/config" }
# moon_pdk = { path = "../../moon/crates/pdk" }
# moon_pdk_api = { path = "../../moon/crates/pdk-api" }
# moon_pdk_test_utils = { path = "../../moon/crates/pdk-test-utils" }
# moon_project = { path = "../../moon/crates/project" }
# moon_target = { path = "../../moon/crates/target" }

# proto
proto_pdk = { version = "0.32.1" }
proto_pdk_api = { version = "0.31.2" }
proto_pdk_test_utils = { version = "0.41.2" }
# proto_pdk = { path = "../../proto/crates/pdk" }
# proto_pdk_api = { path = "../../proto/crates/pdk-api" }
# proto_pdk_test_utils = { path = "../../proto/crates/pdk-test-utils" }

# JavaScript
nodejs_package_json = { version = "0.4.3" }
typescript_tsconfig_json = { version = "0.5.2", features = ["serialize"] }

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"
