[package]
name = "asdf_backend"
version = "0.3.4"
edition = "2024"
description = "asdf backend WASM plugin for proto, for installing tools via asdf plugins."
authors = ["Miles Johnson"]
license = "MIT"
repository = "https://github.com/moonrepo/plugins"
documentation = "https://github.com/moonrepo/plugins/tree/master/backends/asdf"
publish = false

[package.metadata.release]
pre-release-replacements = [
    { file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[lib]
crate-type = ["cdylib"]

[dependencies]
backend_common = { path = "../../crates/backend-common" }
extism-pdk = { workspace = true }
proto_pdk = { workspace = true }
rustc-hash = { workspace = true }
schematic = { workspace = true }
serde = { workspace = true }
starbase_utils = { workspace = true }

[dev-dependencies]
proto_pdk_test_utils = { workspace = true }
starbase_sandbox = { workspace = true }
tokio = { workspace = true }

[features]
default = ["wasm"]
wasm = []
