[package]
name = "cargo_backend"
version = "0.1.0"
edition = "2024"
description = "Cargo backend WASM plugin for proto, for installing CLIs from crates.io."
authors = ["Miles Johnson"]
license = "MIT"
repository = "https://github.com/moonrepo/plugins"
documentation = "https://github.com/moonrepo/plugins/tree/master/backends/cargo"
publish = false

[package.metadata.release]
pre-release-replacements = [
    { file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
backend_common = { path = "../../crates/backend-common" }
extism-pdk = { workspace = true }
proto_pdk = { workspace = true }
rustc-hash = { workspace = true }
schematic = { workspace = true }
serde = { workspace = true }
starbase_utils = { workspace = true, features = ["json"] }

[dev-dependencies]
proto_pdk_test_utils = { workspace = true }
starbase_sandbox = { workspace = true }
tokio = { workspace = true }

[features]
default = ["wasm"]
wasm = []
