[package]
name = "download_extension"
version = "1.0.2"
edition = "2024"
description = "moon extension WASM plugin for downloading a file from a URL."
authors = ["Miles Johnson"]
license = "MIT"
repository = "https://github.com/moonrepo/plugins"
documentation = "https://github.com/moonrepo/plugins/tree/master/extensions/download"
publish = false

[lib]
crate-type = ["cdylib"]

[package.metadata.release]
pre-release-replacements = [
    { file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[dependencies]
extension_common = { path = "../../crates/extension-common" }
extism-pdk = { workspace = true }
moon_pdk = { workspace = true }
moon_pdk_api = { workspace = true }

[dev-dependencies]
moon_pdk_test_utils = { workspace = true }
starbase_sandbox = { workspace = true }
tokio = { workspace = true }

[features]
default = ["wasm"]
wasm = []
