[package]
name = "migrate_nx_extension"
version = "1.0.3"
edition = "2024"
description = "moon extension WASM plugin for migrating an Nx repository to moon."
authors = ["Miles Johnson"]
license = "MIT"
repository = "https://github.com/moonrepo/plugins"
documentation = "https://github.com/moonrepo/plugins/tree/master/extensions/migrate-nx"
publish = false

[lib]
crate-type = ["cdylib"]

[package.metadata.release]
pre-release-replacements = [
    { file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[dependencies]
extension_common = { path = "../../crates/extension-common" }
extism-pdk = { workspace = true }
moon_common = { workspace = true }
moon_config = { workspace = true }
moon_pdk = { workspace = true }
moon_pdk_api = { workspace = true }
moon_target = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starbase_utils = { workspace = true, features = ["glob", "json", "yaml"] }

[dev-dependencies]
moon_pdk_test_utils = { workspace = true }
starbase_sandbox = { workspace = true }
tokio = { workspace = true }

[features]
default = ["wasm"]
wasm = []
