[package]
name = "unpack_extension"
version = "0.0.5"
edition = "2024"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[package.metadata.release]
pre-release-replacements = [
    { file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[dependencies]
extension_common = { path = "../../crates/extension-common" }
extism-pdk = { workspace = true }
moon_pdk = { workspace = true }
moon_pdk_api = { workspace = true }
starbase_archive = { workspace = true, features = ["tar-gz", "zip"] }

[dev-dependencies]
moon_pdk_test_utils = { workspace = true }
starbase_sandbox = { workspace = true }
tokio = { workspace = true }

[features]
default = ["wasm"]
wasm = []
