[package]
name = "go_toolchain"
version = "1.0.0"
edition = "2024"
license = "MIT"
publish = false

[package.metadata.release]
pre-release-replacements = [
    { file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
toolchain_common = { path = "../../crates/toolchain-common" }
go_tool = { path = "../../tools/go", default-features = false }
extism-pdk = { workspace = true }
gomod-parser2 = "0.4.2"
moon_config = { workspace = true }
moon_pdk = { workspace = true, features = ["schematic"] }
moon_pdk_api = { workspace = true }
schematic = { workspace = true, features = ["config"] }
serde = { workspace = true }
starbase_utils = { workspace = true }

[dev-dependencies]
moon_common = { workspace = true }
moon_pdk_test_utils = { workspace = true }
serde_json = { workspace = true }
starbase_sandbox = { workspace = true }
tokio = { workspace = true }

[features]
default = ["wasm"]
wasm = ["go_tool/wasm"]
