[package]
name = "go_toolchain"
version = "1.4.3"
edition = "2024"
description = "Go toolchain WASM plugin for moon."
authors = ["Miles Johnson"]
license = "MIT"
repository = "https://github.com/moonrepo/plugins"
documentation = "https://github.com/moonrepo/plugins/tree/master/toolchains/go"
publish = false

[package.metadata.release]
pre-release-replacements = [
    { file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
toolchain_common = { path = "../../crates/toolchain-common" }
go_tool = { path = "../../tools/go", default-features = false }
extism-pdk = { workspace = true }
gomod-parser = "0.5.2"
moon_config = { workspace = true }
moon_pdk = { workspace = true, features = ["schematic"] }
moon_pdk_api = { workspace = true }
schematic = { workspace = true, features = ["config"] }
serde = { workspace = true }
starbase_utils = { workspace = true }

[dev-dependencies]
moon_common = { workspace = true }
moon_pdk_test_utils = { workspace = true }
serde_json = { workspace = true }
starbase_sandbox = { workspace = true }
tokio = { workspace = true }

[features]
default = ["wasm"]
wasm = ["go_tool/wasm"]
