[package]
name = "node_depman_toolchain"
version = "1.0.2"
edition = "2024"
license = "MIT"
publish = false

[package.metadata.release]
pre-release-replacements = [
    { file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[lib]
crate-type = ["cdylib"]

[dependencies]
toolchain_common = { path = "../../crates/toolchain-common" }
node_depman_tool = { path = "../../tools/node-depman", default-features = false }
extism-pdk = { workspace = true }
moon_config = { workspace = true }
moon_pdk = { workspace = true, features = ["schematic"] }
moon_pdk_api = { workspace = true }
schematic = { workspace = true }
serde = { workspace = true }
starbase_utils = { workspace = true }

[dev-dependencies]
moon_pdk_test_utils = { workspace = true }
serde_json = { workspace = true }
starbase_sandbox = { workspace = true }
tokio = { workspace = true }

[features]
default = ["wasm"]
wasm = ["node_depman_tool/wasm"]
