[package]
name = "node_toolchain"
version = "0.0.1"
edition = "2024"
license = "MIT"
publish = false

[package.metadata.release]
pre-release-replacements = [
    { file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[lib]
crate-type = ["cdylib"]

[dependencies]
toolchain_common = { path = "../../crates/toolchain-common" }
node_tool = { path = "../../tools/node", default-features = false }
extism-pdk = { workspace = true }
moon_config = { workspace = true }
moon_pdk = { workspace = true, features = ["schematic"] }
moon_pdk_api = { workspace = true }
schematic = { workspace = true }
serde = { workspace = true }
starbase_utils = { workspace = true }

[dev-dependencies]
moon_common = { workspace = true }
moon_pdk_test_utils = { workspace = true }
serde_json = { workspace = true }
starbase_sandbox = { workspace = true }
tokio = { workspace = true }

[features]
default = ["wasm"]
wasm = ["node_tool/wasm"]
