[package]
name = "python_pip_toolchain"
version = "0.1.2"
edition = "2024"
license = "MIT"
publish = false

[package.metadata.release]
pre-release-replacements = [
    { file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[lib]
crate-type = ["cdylib"]

[dependencies]
toolchain_common = { path = "../../crates/toolchain-common" }
extism-pdk = { workspace = true }
moon_config = { workspace = true }
moon_pdk_api = { workspace = true }
schematic = { workspace = true }
serde = { workspace = true }

[features]
default = ["wasm"]
wasm = []
