[package]
name = "python_pip_toolchain"
version = "0.1.2"
edition = "2024"
description = "Python pip toolchain WASM plugin for moon."
authors = ["Miles Johnson"]
license = "MIT"
repository = "https://github.com/moonrepo/plugins"
documentation = "https://github.com/moonrepo/plugins/tree/master/toolchains/python-pip"
publish = false

[package.metadata.release]
pre-release-replacements = [
    { file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[lib]
crate-type = ["cdylib"]

[dependencies]
toolchain_common = { path = "../../crates/toolchain-common" }
extism-pdk = { workspace = true }
moon_config = { workspace = true }
moon_pdk_api = { workspace = true }
schematic = { workspace = true }
serde = { workspace = true }

[features]
default = ["wasm"]
wasm = []
