[package]
name = "python_poetry_toolchain"
version = "0.1.0"
edition = "2024"
description = "Python Poetry toolchain WASM plugin for moon."
authors = ["Miles Johnson"]
license = "MIT"
repository = "https://github.com/moonrepo/plugins"
documentation = "https://github.com/moonrepo/plugins/tree/master/toolchains/python-poetry"
publish = false

[package.metadata.release]
pre-release-replacements = [
    { file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[lib]
crate-type = ["cdylib"]

[dependencies]
toolchain_common = { path = "../../crates/toolchain-common" }
python_poetry_tool = { path = "../../tools/python-poetry", default-features = false }
extism-pdk = { workspace = true }
moon_config = { workspace = true }
moon_pdk_api = { workspace = true }
schematic = { workspace = true }
serde = { workspace = true }

[features]
default = ["wasm"]
wasm = ["python_poetry_tool/wasm"]
