[package]
name = "system_toolchain"
version = "1.0.0"
edition = "2024"
license = "MIT"
publish = false

[package.metadata.release]
pre-release-replacements = [
    { file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[lib]
crate-type = ["cdylib"]

[dependencies]
toolchain_common = { path = "../../crates/toolchain-common" }
extism-pdk = { workspace = true }
moon_pdk_api = { workspace = true }

[features]
default = ["wasm"]
wasm = []
