[package]
name = "proto-asdf-plugin"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
proto_pdk = { workspace = true }
extism-pdk = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
rustc-hash = "2.1"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"

[dev-dependencies]
proto_pdk_test_utils = { workspace = true }
tokio = { workspace = true } 

[features]
default = ["wasm"]
wasm = []
