[package]
name = "bun_tool"
version = "0.16.1"
edition = "2024"
license = "MIT"
publish = false

[package.metadata.release]
pre-release-replacements = [
    { file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
tool_common = { path = "../../crates/tool-common" }
lang_javascript_common = { path = "../../crates/lang-javascript-common" }
extism-pdk = { workspace = true }
nodejs_package_json = { workspace = true }
proto_pdk = { workspace = true }
schematic = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proto_pdk_test_utils = { workspace = true }
starbase_sandbox = { workspace = true }
tokio = { workspace = true }

[features]
default = ["wasm"]
wasm = []
