[package]
name = "example_tool"
version = "0.0.1"
edition = "2024"
description = "Example tool."
authors = ["Miles Johnson"]
license = "MIT"
repository = "https://github.com/moonrepo/plugins"
documentation = "https://github.com/moonrepo/plugins/tree/master/tools/example"
publish = false

[package.metadata.release]
pre-release-replacements = [
    { file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[lib]
crate-type = ["cdylib"]

[dependencies]
tool_common = { path = "../../crates/tool-common" }
extism-pdk = { workspace = true }
proto_pdk = { workspace = true }
serde = { workspace = true }

[features]
default = ["wasm"]
wasm = []
