[package]
name = "schema_tool"
version = "0.18.1"
edition = "2024"
description = "Schema-based WASM plugin for proto, powering the TOML plugin pattern."
authors = ["Miles Johnson"]
license = "MIT"
repository = "https://github.com/moonrepo/plugins"
documentation = "https://github.com/moonrepo/plugins/tree/master/tools/internal-schema"
publish = false

[package.metadata.release]
pre-release-replacements = [
    { file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[lib]
crate-type = ["cdylib"]

[dependencies]
tool_common = { path = "../../crates/tool-common" }
extism-pdk = { workspace = true }
proto_pdk = { workspace = true }
regex = { workspace = true, features = ["unicode-perl"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proto_pdk_test_utils = { workspace = true, features = ["schema"] }
starbase_sandbox = { workspace = true }
tokio = { workspace = true }

[features]
default = ["wasm"]
wasm = []
