[package]
name = "node_depman_tool"
version = "0.17.4"
edition = "2024"
license = "MIT"
publish = false

[package.metadata.release]
pre-release-replacements = [
    { file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
tool_common = { path = "../../crates/tool-common" }
lang_javascript_common = { path = "../../crates/lang-javascript-common" }
extism-pdk = { workspace = true }
nodejs_package_json = { workspace = true }
proto_pdk = { workspace = true }
regex = { workspace = true, features = ["unicode"] }
schematic = { workspace = true }
serde = { workspace = true }
starbase_utils = { workspace = true, features = ["json"] }

[dev-dependencies]
proto_pdk_api = { workspace = true }
proto_pdk_test_utils = { workspace = true }
serde_json = { workspace = true }
starbase_sandbox = { workspace = true }
tokio = { workspace = true }

[features]
default = ["wasm"]
wasm = []
