[package]
name = "node_depman_tool"
version = "0.18.1"
edition = "2024"
description = "Node.js dependency managers (npm, pnpm, yarn) WASM plugin for proto."
authors = ["Miles Johnson"]
license = "MIT"
repository = "https://github.com/moonrepo/plugins"
documentation = "https://github.com/moonrepo/plugins/tree/master/tools/node-depman"
publish = false

[package.metadata.release]
pre-release-replacements = [
    { file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
tool_common = { path = "../../crates/tool-common" }
lang_javascript_common = { path = "../../crates/lang-javascript-common" }
extism-pdk = { workspace = true }
npmrc-config-rs = "0.1.1"
proto_pdk = { workspace = true }
rustc-hash = { workspace = true }
regex = { workspace = true, features = ["unicode"] }
schematic = { workspace = true }
serde = { workspace = true }
starbase_utils = { workspace = true, features = ["json", "yaml"] }

[dev-dependencies]
proto_pdk_api = { workspace = true }
proto_pdk_test_utils = { workspace = true }
serde_json = { workspace = true }
starbase_sandbox = { workspace = true }
tokio = { workspace = true }

[features]
default = ["wasm"]
wasm = []
